@@ -440,6 +440,9 @@ victory_stops_time_level = 13
 win_level = 14
 win_room = 5
 
+; Number of ticks to wait before a loose floor falls. (default = 11)
+loose_floor_delay = 11
+
 
 ; The following customization options can be used in all level sections:
 ; level_type = 0: dungeon, 1: palace
