@@ -431,6 +431,7 @@ void options_process_custom_general(SDL_RWops* rw, rw_process_func_type process_
 	process(custom->victory_stops_time_level);
 	process(custom->win_level);
 	process(custom->win_room);
+	process(custom->loose_floor_delay);
 }
 
 void options_process_custom_per_level(SDL_RWops* rw, rw_process_func_type process_func) {
