@@ -533,3 +533,4 @@ FIXED: Fixed crash on Linux when the prince fell out of the level while a guard 
 FIXED: With start_in_blind_mode enabled, moving objects were not displayed until blind mode was toggled off+on.
 FIXED: Fix upside-down screen when using PRINCE.EXE from v1.3 or v1.4.
 FIXED: Tell Windows that SDLPoP is DPI aware to prevent unwanted stretching.
+DONE: Added customization option for loose floor delay. (Used in Neon Persia.)
